<resources>
    <string name="app_name">MusicX</string>
    <string name="item_1">Home</string>
    <string name="item_2">Browse</string>
    <string name="item_3">Stations</string>
	<string name="item_4">Search</string>
	<string name="item_5">Library</string>
	
	<string name="mostPlayed"><u>Most Played \nWorldwide</u></string>
	
	<string name="playbackheaderText">Simultaneous playback \nwith other apps</string>
	
	<string name="animText">Add animation effects \nwhile playing music.</string>
	<string name="timerText">Turn off the music \nwhen the timer ends.</string>
	<string name="playbackText">When disabled, earphone controls \n(including voice commands) will be \nunavailable.</string>
	<string name="cloudsyncText">Automatically sync local songs \nwhen connected to internet.</string>
	<string name="restrictionsText">Explicit songs won&#96;t \nbe able to be played.</string>
	
    <string name="opQuality">"Note: Songs that can't be played at the quality you select will automatically be played at the next available quality."</string>
    
	<string name="downloadqualitySubtext">1.Hi-res songs and Super-quality(HQ) \nsongs can only be downloaded by Music members. \n2.Without the required membership, \nauto-downloaded Hi-Res/SQ songs will \ndefault to a lower quality.</string>
    
    <string name="timersubText">When the timer ends, Music will finish the current track before closing.</string>
</resources>
